# django-prometheus

./: CHANGELOG.md  pyproject.toml  requirements.txt  setup.py
django_prometheus/: __init__.py
django_prometheus/db/backends/postgis/: base.py
django_prometheus/db/backends/postgresql/: base.py
