[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = " --ignore django_prometheus/tests/end2end"

[tool.isort]
multi_line_output = 3
line_length = 88
force_grid_wrap = 0
include_trailing_comma = true


[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    {py39,py310,py311,py312}-django42-{end2end,unittests},
    {py310,py311,py312}-django{50,51,52}-{end2end,unittests},
    py312-lint

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312, py312-lint

[testenv]
deps =
    django42: Django>=4.2,<5.0
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2
    django52: Django>=5.2,<6.0
    coverage
    -rrequirements.txt
skip_missing_interpreters=true

changedir =
    end2end: {toxinidir}/django_prometheus/tests/end2end
setenv =
    end2end: PYTHONPATH = {toxinidir}
    end2end: DJANGO_SETTINGS_MODULE=testapp.settings
commands =
    end2end: coverage run --source=django_prometheus -m pytest testapp/
    unittests: coverage run --source=django_prometheus setup.py test
    unittests: python setup.py sdist bdist_wheel

[testenv:py312-lint]
deps =
    black>=24.3
    flake8>=7.0
    isort>=5.13,<6
    flake8-debugger
    flake8-2020
    flake8-comprehensions
    flake8-bugbear
commands =
    black --check django_prometheus/
    flake8 django_prometheus
    isort --check-only django_prometheus/

"""
